// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deprecated/Promo PromoGroup smoke-test 1`] = `
<div class="nhsuk-grid-row nhsuk-promo-group">
  <div class="nhsuk-grid-column-one-half nhsuk-promo-group__item">
    <div class="nhsuk-promo">
      <a class="nhsuk-promo__link-wrapper"
         href="https://www.nhs.uk"
      >
        <img class="nhsuk-promo__img"
             src="https://assets.nhs.uk/prod/images/MS_1018_give_blood.2e16d0ba.fill-2400x1350.jpg"
             alt
        >
        <div class="nhsuk-promo__content">
          <h3 class="nhsuk-promo__heading">
            Save a life: give blood
          </h3>
          <p class="nhsuk-promo__description">
            Please register today. Donating blood is easy, and saves lives.
          </p>
        </div>
      </a>
    </div>
  </div>
  <div class="nhsuk-grid-column-one-half nhsuk-promo-group__item">
    <div class="nhsuk-promo">
      <a class="nhsuk-promo__link-wrapper"
         href="https://www.nhs.uk"
      >
        <img class="nhsuk-promo__img"
             src="https://assets.nhs.uk/prod/images/MS_1018_give_blood.2e16d0ba.fill-2400x1350.jpg"
             alt
        >
        <div class="nhsuk-promo__content">
          <h3 class="nhsuk-promo__heading">
            Save a life: give blood
          </h3>
          <p class="nhsuk-promo__description">
            Please register today. Donating blood is easy, and saves lives.
          </p>
        </div>
      </a>
    </div>
  </div>
</div>
<div class="nhsuk-grid-row nhsuk-promo-group">
  <div class="nhsuk-grid-column-one-half nhsuk-promo-group__item">
    <div class="nhsuk-promo">
      <a class="nhsuk-promo__link-wrapper"
         href="https://www.nhs.uk"
      >
        <img class="nhsuk-promo__img"
             src="https://assets.nhs.uk/prod/images/MS_1018_give_blood.2e16d0ba.fill-2400x1350.jpg"
             alt
        >
        <div class="nhsuk-promo__content">
          <h3 class="nhsuk-promo__heading">
            Save a life: give blood
          </h3>
          <p class="nhsuk-promo__description">
            Please register today. Donating blood is easy, and saves lives.
          </p>
        </div>
      </a>
    </div>
  </div>
  <div class="nhsuk-grid-column-one-half nhsuk-promo-group__item">
    <div class="nhsuk-promo">
      <a class="nhsuk-promo__link-wrapper"
         href="https://www.nhs.uk"
      >
        <img class="nhsuk-promo__img"
             src="https://assets.nhs.uk/prod/images/MS_1018_give_blood.2e16d0ba.fill-2400x1350.jpg"
             alt
        >
        <div class="nhsuk-promo__content">
          <h3 class="nhsuk-promo__heading">
            Save a life: give blood
          </h3>
          <p class="nhsuk-promo__description">
            Please register today. Donating blood is easy, and saves lives.
          </p>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Deprecated/Promo SmallPromo smoke-test 1`] = `
<div class="nhsuk-promo nhsuk-promo--small">
  <a class="nhsuk-promo__link-wrapper"
     href="https://www.nhs.uk"
  >
    <img class="nhsuk-promo__img"
         src="https://assets.nhs.uk/prod/images/MS_1018_give_blood.2e16d0ba.fill-2400x1350.jpg"
         alt
    >
    <div class="nhsuk-promo__content">
      <h3 class="nhsuk-promo__heading">
        Access your GP record
      </h3>
      <p class="nhsuk-promo__description">
        Please register today. Donating blood is easy, and saves lives.
      </p>
    </div>
  </a>
</div>
`;

exports[`Deprecated/Promo Standard smoke-test 1`] = `
<div class="nhsuk-promo">
  <a class="nhsuk-promo__link-wrapper"
     href="#"
  >
    <div class="nhsuk-promo__content">
      <h3 class="nhsuk-promo__heading">
        Save a life: give blood
      </h3>
      <p class="nhsuk-promo__description">
        Please register today. Donating blood is easy, and saves lives.
      </p>
    </div>
  </a>
</div>
`;

exports[`Deprecated/Promo WithImage smoke-test 1`] = `
<div class="nhsuk-promo">
  <a class="nhsuk-promo__link-wrapper"
     href="https://www.nhs.uk"
  >
    <img class="nhsuk-promo__img"
         src="https://assets.nhs.uk/prod/images/MS_1018_give_blood.2e16d0ba.fill-2400x1350.jpg"
         alt
    >
    <div class="nhsuk-promo__content">
      <h3 class="nhsuk-promo__heading">
        Save a life: give blood
      </h3>
      <p class="nhsuk-promo__description">
        Please register today. Donating blood is easy, and saves lives.
      </p>
    </div>
  </a>
</div>
`;

exports[`Deprecated/Promo WithNoDescription smoke-test 1`] = `
<div class="nhsuk-promo">
  <a class="nhsuk-promo__link-wrapper"
     href="https://www.nhs.uk"
  >
    <img class="nhsuk-promo__img"
         src="https://assets.nhs.uk/prod/images/MS_1018_give_blood.2e16d0ba.fill-2400x1350.jpg"
         alt
    >
    <div class="nhsuk-promo__content">
      <h3 class="nhsuk-promo__heading">
        Save a life: give blood
      </h3>
    </div>
  </a>
</div>
`;
